test/integration/bad/functions-bad31.stan
functions {
  real gen(real parameters) {
    return 1;
  }
}
